# open-image

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  _open_image_skill_bootstrap.py  gen.py  open-image-skill.pth  open_image_skill.py  pyproject.toml  setup.py  test_gen.py
.github/workflows/: release.yml  test.yml
docs/: release-guide.md
plans/260423-2148-openai-image-cli-tool/: phase-01-project-setup.md  phase-02-core-implementation.md  phase-03-manual-testing.md  plan.md
plans/260426-0915-model-support-and-claude-skill/: phase-01-known-models-and-list-flag.md  phase-02-skill-install-mechanism.md  phase-03-readme-and-version-bump.md  phase-04-tests.md  plan.md
plans/260426-1144-release-flow-and-security-hardening/: phase-01-changelog-and-readme.md  phase-02-test-workflow.md  phase-03-release-workflow.md  phase-04-setup-and-tags.md  plan.md
plans/260427-1941-style-presets-and-aspect-shortcuts/: phase-01-implement-style-and-aspect-flags.md  phase-02-update-skill-template-and-write-tests.md  phase-03-docs-and-release-v0-5-0.md  plan.md
plans/reports/: brainstorm-260423-2148-openai-image-cli-tool.md  brainstorm-260423-2209-mcp-api-extension-decision.md  brainstorm-260426-0915-model-support-and-claude-skill.md  brainstorm-260426-1144-release-flow-and-security-hardening.md  brainstorm-260427-1941-style-presets-and-aspect-shortcuts.md
prompts/: test-cyberpunk-market.txt  test-p.txt
