[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-image"
version = "0.6.0"
description = "Tiny CLI for OpenAI image generation. Prompt in, PNG out. Model-agnostic."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "tvtdev94", email = "tvtdev94@gmail.com" }]
keywords = ["openai", "image", "cli", "dall-e", "gpt-image", "generative-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
open-image = "gen:main"

[project.urls]
Homepage = "https://github.com/tvtdev94/open-image"
Repository = "https://github.com/tvtdev94/open-image"
Issues = "https://github.com/tvtdev94/open-image/issues"

[tool.setuptools]
py-modules = ["gen", "open_image_skill", "_open_image_skill_bootstrap"]
